tests/snapshots/compiler_error_fixtures/duplicate_instance.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/duplicate_instance.flx
== compile ==
failed (compile)
== diagnostics ==
error[E443]: Duplicate Instance

Duplicate instance for `Sizeable<Int>`.

  examples/compiler_errors/duplicate_instance.flx:19:1
   |
19 | instance Sizeable<Int> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
20 |     fn size(x) { x + 1 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^
21 | }
   | ^


error[E001]: Duplicate Name

Duplicate binding: `__tc_Sizeable_Int_size` is already defined.

  examples/compiler_errors/duplicate_instance.flx:0:1
  |

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/compiler_errors/duplicate_instance.flx:0:1
  |

Found 2 errors.
== stdout ==
<not executed>
